# Aravis-OpenCV-Wrapper

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
examples/: main.cpp  trigger.cpp
src/: Camera.cpp  Camera.hpp
